bad/sub_invalid_types_class_array.example_compiler_output
ERROR
[1mbad/sub_invalid_types_class_array.lat:6:4: [1;31merror: [0;1msubtraction is defined only for int values, not `X` and `string[]`[m
	x - new string[3];
	  [1;32m^[m
